Revision history for {{$dist->name}}

{{$NEXT}}

1.23_01   2020-05-01 11:13:59 -0600
  - Custom record arguments are kept around for the lifetime of the
    function call, meaning they don't have to be explicitly kept by
    the custom code wrapper as long as they aren't used after the
    function returns (gh#236, gh#247).
  - This completes support for custom record types.  This is a
    release candidate.

1.22_01   2020-05-01 08:16:25 -0600
  - Fix test on MSWin32 + older libffi where returning record values
    doesn't work (introduced in 1.20_01, gh#250)

1.21_01   2020-04-29 19:10:59 -0600
  - Diagnostic release.

1.20_01   2020-04-29 06:45:11 -0600
  - Return record custom record value (gh#214, gh#215, gh#235, gh#238, gh#245)

1.19_01   2020-04-27 12:38:43 -0600
  - Diagnostic release.

1.18_01   2020-04-19 10:17:52 -0600
  - Return pointer to custom record (gh#214, gh#215, gh#235, gh#238)

1.17_01   2020-04-18 09:04:02 -0600
  - Silence (probably harmless) clang warning introduced in 1.12_01
    (gh#237, gh#239)

1.16_01   2020-04-18 10:10:37 -0400
  - Initial support for custom records.  Returning custom records
    (either via pointer or by reference) is excluded, but should
    be added soon (gh#214, gh#215, gh#235)

1.15_01   2020-04-17 10:34:13 -0600
  - Internal refactor (gh#214)

1.14_01   2020-04-17 09:14:25 -0600
  - Experimental: with api => 2, a return value of NULL is
    translated to undef instead of empty list (gh#234, gh#231)

1.12_01   2020-04-17 10:35:51 -0400
  - Added grow and set_used_length functions to
    FFI::Platypus::Buffer (djerius++ gh#225)

1.11      2020-04-16 04:07:34 -0600
  - Add api method (gh#233)
  - On Visual C++ Perl detect libffi using Win32::Vcpkg, if
    available (gh#229)
  - Simplified internal handling of 64 bit integers for
    32 and 64 bit arch (gh#228)

1.10      2020-02-05 16:39:51 -0700
  - On OS X, check if homebrew + libffi is installed and use
    that instead of falling back on Alien::FFI (libffi isn't